UPDATED: package.json homepage

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "country-info",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://jazzdesign.github.io/hg-case-study/",
   "dependencies": {
     "@reduxjs/toolkit": "^1.5.1",
     "@testing-library/jest-dom": "^5.11.4",
